# experiments

./: .gitignore  experiments.cabal  learn-haskell-coq-ml-etc.cabal
app/: Main.hs  MainArrowFun.hs
app/monoids/: category.md
monoids/: Main.hs
src/: ArrowFun.hs  Eval0.hs  Eval1.hs  Eval2.hs  Eval2IO.hs  Eval3.hs  Types.hs
src/Test/HUnit/: Util.hs
test/: Tests.hs
