name:                experiments
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/experiments#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types, Test.HUnit.Util, Eval0, Eval1, Eval2, Eval2IO, Eval3, ArrowFun
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , HUnit
                     , mtl
  default-language:    Haskell2010

executable main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , experiments
                     , containers
                     , mtl
  default-language:    Haskell2010

executable category-monoids
  hs-source-dirs:      monoids
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , experiments
                     , containers
                     , mtl
                     , stm
                     , wai
                     , bytestring
                     , managed
                     , async
                     , http-types
                     , warp
  default-language:    Haskell2010

executable arrowfun
  hs-source-dirs:      app
  main-is:             MainArrowFun.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , experiments
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                     , experiments
                     , HUnit
                     , containers
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/experiments
